chore: modify brownie config

--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -1,5 +1,4 @@
-# exclude SafeMath when calculating test coverage
-# https://eth-brownie.readthedocs.io/en/v1.10.3/config.html#exclude_paths
-reports:
-  exclude_contracts:
-    - SafeMath
+autofetch_sources: true
+
+networks:
+  default: hardhat
